finished the calculator

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My Calculator</h1>
+        <input type="number" class="valueOne">
+        <input type="number" class="valueTwo">
+    <button type="button" class="add">+</button>
+    <button type="button" class="subtract">-</button>
+    <button type="button" class="multiply">*</button>
+    <button type="button" class="divide">/</button>
+    <button type="button" class="square">^2</button>
+    <div></div>
     <script src = "main.js"></script>
+    
 </body>
 </html>
